# Enzyme

./: setup.sh
enzyme/Enzyme/: CMakeLists.txt  Enzyme.cpp  EnzymeLogic.cpp
enzyme/Enzyme/Runtimes/FPRT/: CMakeLists.txt  GarbageCollection.cpp  OpInfo.cpp  Trace.cpp
enzyme/include/enzyme/fprt/: flops.def  fprt.h  mpfr.h
prec-tests/basic-c/: test.sh
prec-tests/basic-cpp/: test.sh
prec-tests/basic-f90/: test.sh
prec-tests/trunc-cpp/: CMakeLists.txt
prec-tests/trunc-cpp/src/: main_enzyme.cpp
test/: EnzymeMPFR.h  main.c  setup.sh
test/total_numerical_error/: compile.sh  dexp.cpp  gen-data.sh  plot.gp  v.eps
